<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="my_home">My Home</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add_post">Add Post</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instagramlogo">InstagramLogo</string>
    <string name="sendicon">SendIcon</string>
    <string name="searchNew">Search...</string>
    <string name="search_image">Search Image</string>
    <string name="username">username</string>
    <string name="options_segment">Options Segment</string>
    <string name="_0">0</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="__0">0</string>
    <string name="following">Following</string>
    <string name="___0">0</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="bio">Bio</string>
    <string name="gridimage">GridImage</string>
    <string name="saveimage">SaveImage</string>
    <string name="notifications_fragment">Notifications</string>
    <string name="change_image">Change Image</string>
    <string name="full_name_user">Full Name</string>
    <string name="username_profile_frag">UserName</string>
    <string name="bio_profile">Bio</string>
    <string name="logout">Logout</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="login">Login</string>
    <string name="need_new_account_sign_up">Need New Account? Sign Up</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="fullname">FullName</string>
    <string name="usernameSignUP">UserName...</string>
    <string name="search_username">username</string>
    <string name="user_full_name">user full name</string>
    <string name="follow">Follow</string>
    <string name="searchBtn">Search</string>
    <string name="say_something_about_your_post">Say something about your post...</string>
    <string name="user_name">user name</string>
    <string name="comments">Comments</string>
    <string name="write_your_comment">Write your comment...</string>
    <string name="publish">Publish</string>
    <string name="username_cil">username</string>
    <string name="comment_cil">comment</string>
    <string name="your_posts">Your Posts</string>
    <string name="username_logged">UserName</string>
    <string name="clicked_post">Clicked Post</string>
    <string name="usernamepdl">userNamePDL</string>
    <string name="who_liked_your_post">Who liked your post?</string>
    <string name="who_commented_on_post">Who commented on post?</string>
    <string name="following_search_frag">Following</string>
    <string name="followers_search_frag">Followers</string>
    <string name="nameuser">nameUser</string>
    <string name="usernamestory">userNameStory</string>
    <string name="______0">0</string>
    <string name="seen_by">seen by</string>
    <string name="delete">Delete</string>
</resources>