<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5d3ecd"
        android:id="@+id/appBarLayoutSearch">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:id="@+id/searchToolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="90dp"
                    android:hint="@string/searchNew"
                    android:inputType="text"
                    tools:ignore="Autofill" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/searchBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/searchBtn"
                    android:layout_marginEnd="6dp"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/whoLikedPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/who_liked_your_post"
                    android:textSize="30sp"
                    android:visibility="gone"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/whoCommentedPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/who_commented_on_post"
                    android:visibility="gone"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following_search_frag"
                    android:visibility="gone"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers_search_frag"
                    android:visibility="gone"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSearch"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

</FrameLayout>