<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ui"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/logoSingUp"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:src="@drawable/instagram"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"/>

    <EditText
        android:id="@+id/fullNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        android:inputType="text"
        android:hint="@string/fullname"
        android:textColor="@color/black"
        android:layout_below="@id/logoSingUp"
        android:textSize="21sp"/>

    <EditText
        android:id="@+id/userNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        android:inputType="text"
        android:textColor="@color/black"
        android:hint="@string/usernameSignUP"
        android:layout_below="@id/fullNameSignUp"
        android:textSize="21sp"/>

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:layout_below="@id/userNameSignUp"
        android:textSize="21sp"/>

    <EditText
        android:id="@+id/passwordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:layout_below="@id/emailSignUp"
        android:textSize="21sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupButtonMainPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:layout_below="@id/passwordSignUp"
        android:textSize="21sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logInsideButtonMainPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B38CF8"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/already_have_an_account_sign_in"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textSize="21sp"/>

</RelativeLayout>