<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:id="@+id/appBarLayoutProfileFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profileToolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/profileFragmentUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    tools:ignore="RelativeOverlap" />
                
                <ImageView
                    android:id="@+id/optionsView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/options"
                    android:contentDescription="@string/options_segment" />
                
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@+id/appBarLayoutProfileFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/topBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/proImageProfileFragment"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/profile_icon"
                    tools:ignore="MissingClass" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/total_posts"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textColor="@color/black"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/posts"
                                android:textSize="15sp"
                                android:textColor="@color/black"/>


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/followersSection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginStart="7dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/total_followers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/__0"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textColor="@color/black"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textSize="15sp"
                                android:textColor="@color/black"/>


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/followingSection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginStart="7dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/total_following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/___0"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textColor="@color/black"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textSize="15sp"
                                android:textColor="@color/black"/>

                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/editAccountSettingsButton"
                        android:layout_width="173dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="3dp"
                        android:text="@string/edit_profile"
                        android:layout_gravity="center"
                        android:background="@drawable/buttons_background"
                        android:textAllCaps="false"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/midBar"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fullNameProfileFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/bioProfileFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/button_black_background"
                android:layout_marginEnd="5dp">
                
                <ImageView
                    android:id="@+id/imageGridViewBtn"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/grid"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:contentDescription="@string/gridimage" />

                <ImageView
                    android:id="@+id/imagesSaveBtn"
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:layout_height="49dp"
                    android:src="@drawable/save_large_icon"
                    android:contentDescription="@string/saveimage"
                    style="?android:attr/buttonBarButtonStyle"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerUploadPic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/scrollView"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerSavedPic"
        android:layout_margin="5dp"
        android:layout_below="@id/scrollView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</RelativeLayout>