<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ui"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:src="@drawable/instagram"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"/>

    <EditText
        android:id="@+id/emailLogin"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_below="@id/logo"
        android:textSize="21sp"/>

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="6dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@id/emailLogin"
        android:textSize="21sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButtonMainPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_below="@id/passwordLogin"
        android:textSize="21sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButtonMainPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AA8BE3"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/need_new_account_sign_up"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textSize="21sp"/>

</RelativeLayout>